--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <article id="metas">
       <h2>Minhas Metas Para Esse Ano</h2>
       <ul>
-      <li>Meus objetivos profissionais e educacionais deste ano são me dedicar aos estudos, melhorar meu desempenho em todas as matérias e aproveitar ao máximo as oportunidades de aprendizado. Quero adquirir novos conhecimentos, participar de projetos e atividades que contribuam para meu crescimento pessoal e profissional. Além disso, pretendo concluir o curso de Desenvolvimento de Sistemas, alcançando mais uma etapa importante na minha formação e me preparando melhor para seguir uma carreira na área de tecnologia.</li>
+      <li>Meus objetivos profissionais e educacionais deste ano são me dedicar aos estudos, melhorar meu desempenho em todas as matérias e aproveitar ao máximo as oportunidades de aprendizado. Quero adquirir novos conhecimentos, participar de projetos e atividades que contribuam para meu crescimento pessoal e profissional. Além disso, pretendo concluir o curso de Desenvolvimento de Sistemas, alcançando mais uma etapa importante na minha formação e me preparando para o mercado de trabalho.Para o próximo ano, minha meta é continuar estudando, aprofundar meus conhecimentos na área de tecnologia e buscar novas qualificações.</li>
       </ul>
       <img src="metas.jpg" alt="Metas para o ano" class="imagem-padrao">
       <p class="autor">Autor: Maria Eduarda</p>
@@ -111,3 +111,4 @@
 
 </body>
 </html>
+
